# fella

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  calendar.h  events.h  flake.nix  main.c
.cache/clangd/index/: calendar.h.332A6CA20DD92430.idx  clay.h.388B81B641A2A343.idx  clay_renderer_raylib.c.65B6153CC0D17635.idx  main.c.1A63690C3283608F.idx
resources/: entries.json  private-entries.json  work-entries.json
src/: app_config.c  app_config.h  cal_common.h  calendar.h  config.h.in  config_dir.h  events.c  events.h  google_auth.c  google_auth.h  google_calendar.c  google_calendar.h  main.c  oauth_server.c  oauth_server.h  theme.h
src/components/: about_page.h  calendar_checkbox.h  calendar_row.h  event_detail.h  menu_item.h  settings_page.h
